Try fixing this error: `Console Error: Hydration failed because the serv

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,7 +7,7 @@
     "experience": "Experiencia",
     "downloadCV": "Descargar CV",
     "openMenu": "Abrir menú",
-    "cvFile": "/test-cv.pdf"
+    "cvFile": "/cv-kedein-rodriguez.pdf"
   },
   "hero": {
     "alt": "Kedein Rodriguez Gatica",
