--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
     "experience": "Experience",
     "downloadCV": "Download CV",
     "openMenu": "Open menu",
-    "cvFile": "/test-cv.pdf"
+    "cvFile": "/cv-kedein-rodriguez-en.pdf"
   },
   "hero": {
     "alt": "Kedein Rodriguez Gatica",
