--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,4 +1,3 @@
-
 {
   "header": {
     "about": "Sobre Mí",
@@ -8,6 +7,8 @@
     "contact": "Contáctame",
     "downloadCV": "Descargar CV",
     "openMenu": "Abrir menú",
+    "menuTitle": "Menú Principal",
+    "menuDescription": "Una lista de enlaces de navegación para recorrer las diferentes secciones de la página.",
     "cvFile": "/cvs/cv-kedein-rodriguez.pdf"
   },
   "hero": {
